[gd_scene load_steps=7 format=3 uid="uid://m4mldp66rc6m"]

[ext_resource type="Script" path="res://get_sprites.gd" id="1_u75ox"]
[ext_resource type="Script" path="res://Start_Button.gd" id="1_ucgwb"]
[ext_resource type="Script" path="res://Tutorial_Button.gd" id="2_hrosy"]
[ext_resource type="Script" path="res://Options_button.gd" id="3_4760c"]
[ext_resource type="Script" path="res://RichTextLabel.gd" id="4_ah3rv"]

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_l0mbh"]
format = 1

[node name="Node2D" type="Node2D"]
script = ExtResource("1_u75ox")

[node name="Start_Button" type="Button" parent="."]
offset_left = 510.0
offset_top = 266.0
offset_right = 518.0
offset_bottom = 274.0
scale = Vector2(1.76923, 2.63158)
text = "Start Game"
script = ExtResource("1_ucgwb")

[node name="Tutorial_Button" type="Button" parent="."]
custom_minimum_size = Vector2(120, 80)
offset_left = 533.0
offset_top = 372.0
offset_right = 653.0
offset_bottom = 452.0
text = "Tutorial"
script = ExtResource("2_hrosy")

[node name="Options_button" type="Button" parent="."]
offset_left = 1037.0
offset_top = 29.0
offset_right = 1111.0
offset_bottom = 60.0
text = "Options "
script = ExtResource("3_4760c")

[node name="Name" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(404, 152)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 403.0
offset_top = 120.0
offset_right = 807.0
offset_bottom = 272.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 53
theme_override_font_sizes/bold_font_size = 1
text = "Micro Defender"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 493.0
offset_top = 460.0
offset_right = 693.0
offset_bottom = 510.0
text = "Last High Score:"
script = ExtResource("4_ah3rv")

[node name="gen_sprites_req" type="HTTPRequest" parent="."]

[node name="ship_spawn_intro" type="Sprite2D" parent="."]
position = Vector2(212, 155)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="music" type="AudioStreamPlayer" parent="."]
autoplay = true

[node name="gen_music_req" type="HTTPRequest" parent="."]

[node name="gen_sound_req" type="HTTPRequest" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamWAV_l0mbh")
volume_db = -23.291
autoplay = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
